# httpd2go

./: CMakeLists.txt  arguments.cpp  arguments.h  default.conf.cpp  environment.cpp  environment.h  main.cpp  mysql-commands.txt  php.ini.cpp  servicebase.txt  systray.cpp  systray.h  webserver.cpp  webserver.h
